# python-beginners

./: Comandos do pyenv e poetry  Fatorial_recursiva.py  audio-to-text.py  baixar-videos.py  bubble_sort.py  calendario.py  donwload-video-yt.txt  download-video-yt.py  download-youtube.py  import cv2.py  remove-fundo.py  sorting.py  texto.py  video-to-audiomp3.py  video-to-mp3.py
Converter_PDF_Audiomp3/: converter_pdf_audio.py
Criando_Imagens/: pyproject.toml
Criando_Imagens/criando_imagens/: criando imagens.ipynb
Criando_Imagens/pysqlite3-0.5.3/pysqlite3.egg-info/: PKG-INFO
Mad_libs_Generator/: pyproject.toml
Mad_libs_Generator/mad_libs_generator/: __init__.py
